create permalinks to remove html ext in url

--- a/_posts/2018-08-16-first.md
+++ b/_posts/2018-08-16-first.md
@@ -2,6 +2,7 @@
 layout: post
 title: "My First Blog"
 date: 2018-08-16 23:10:00 -0400
+permalink: /blog/:year/:month/:title/
 ---
 
 The story of a kid with a dream, a kid who, wanted to be a professional singer. Going through college with nothing but that in my mind. At 25 years old, I’m not necessarily abandoning that, but simply changing my course a bit I graduated from Kent State with a degree in Music wanting to become the greatest operatic baritone you ever had seen. Since then I’ve changed my sights into Programming.
