--- a/_posts/2018-08-22-bfc.md
+++ b/_posts/2018-08-22-bfc.md
@@ -2,6 +2,7 @@
 layout: post
 title: "50 years of Music"
 date: 2018-08-22 13:58:24 -0400
+permalink: /blog/:year/:month/:title/
 ---
 
 Many of those who know me know that I am a member of the Cleveland Orchestra Chorus. I’m a second-year member of their full chorus and I’ve sung with their Blossom Festival Chorus over the last few summers too. The Blossom Festival Chorus (BFC) is the Orchestra’s “summer” chorus. Generally, the BFC will be in concerts at the Blossom Music Center, which is the Orchestra’s “summer home”. Blossom Music Center is in its 50th anniversary of opening.
