--- a/_posts/2018-10-24-ws-gm-one.md
+++ b/_posts/2018-10-24-ws-gm-one.md
@@ -17,4 +17,4 @@ Because of the starters it was thought this would be a low-scoring game. But tha
 
 This series should be a fun one to watch. For game two, Boston will be putting out left-hander [David Price](https://www.mlb.com/player/david-price-456034?stats=career-p-pitching-mlb), while LA will send out another lefty, [Hyun-Jun Ryu](https://www.mlb.com/player/hyun-jin-ryu-547943?stats=career-p-pitching-mlb).
 
-Scorebook by: [Bob Carpenter](https://www.bcscorebook.com/)
+Scorebook by: [Bob Carpenter](https://www.bcscorebook.com/).
