add comments to blog

--- a/_posts/2018-10-24-ws-gm-one.md
+++ b/_posts/2018-10-24-ws-gm-one.md
@@ -2,6 +2,7 @@
 layout: post
 title: "2018 World Series: Game One"
 date: 2018-10-24 13:15:00 -0400
+comments: true
 ---
 I am an avid fan of baseball, I enjoy it's history and it's ability to stay relevent in modern times. Although I live in the Cleveland area and am a big fan of the Cleveland Indians, I still enjoy the game even when my team isn't playing. I also like to keep score as a hobby. It really is a great way to get into the game. So I decided to show my score books through-out this years World Series, between the Boston Red Sox and The Los Angeles Dodgers.
 
