--- a/_posts/2018-10-25-ws-gm-two.md
+++ b/_posts/2018-10-25-ws-gm-two.md
@@ -2,6 +2,7 @@
 layout: post
 title: "2018 World Series: Game Two"
 date: 2018-10-25 12:40:00 -0400
+comments: true
 ---
 Game Two was closer than Game One, but Boston won it again to take a commanding 2-0 lead on the series.
 
