make edits to post

--- a/_posts/2019-2-12-my-why.md
+++ b/_posts/2019-2-12-my-why.md
@@ -8,6 +8,6 @@ comments: true
 
 I am a first time poster of T-SQL Tuesdays. My experience with SQL is limited. In fact, the only experience I have is from a tutorial on syntax from W3C. Though I found T-SQL Tuesday through a friend Allen White, and thought I’d share my “why”.
 
-I have a degree in Music performance. I enjoyed making music with colleagues but as got closer and closer to graduating it became increasingly obvious that it would become very hard to make a living in the music world. I never had a very strong desire to teach and being a full-time opera singer would be very hard to live. So, I needed an alternative. My father suggested I learn programing. Through some online tutorials I began learning and started to really enjoy it. I’ve spent the last year learning Front-End Web Development, and loved how it gave me the ability to just “create”.  The ability to make things that I could show off to friends and family was very gratifying to me. It was a similar feeling to going on stage and “showing off” my skills as singer. As I now aim to learn the back-end I am also looking for work. One of the things I miss about music school is working with colleagues. I’m not getting the “ensemble” part of my life as much as I’d like.
+I have a degree in Music performance. I enjoyed making music with colleagues but as I got closer and closer to graduating it became increasingly obvious that it would become very hard to make a living in the music world. I never had a very strong desire to teach and being a full-time opera singer would be hard to live. So, I needed an alternative. My father suggested I learn programming. Through some online tutorials I began learning and started to really enjoy it. I’ve spent the last year learning Front-End Web Development, and loved how it gave me the ability to just “create”.  The ability to make things that I could show off to friends and family was very gratifying to me. It was a similar feeling to going on stage and “showing off” my skills as singer. As I now aim to learn the back-end I am also looking for work. One of the things I miss about music school is working with colleagues. I’m not getting the “ensemble” part of my life as much as I’d like.
 
-So, I guess that’s my “why” at the moment: looking for the “ensemble” that I can fit. 
+So, I guess that’s my “why” at the moment: looking for the “ensemble” that I can fit.
