--- a/_posts/2019-2-12-my-why.md
+++ b/_posts/2019-2-12-my-why.md
@@ -4,7 +4,7 @@ title: "T-SQL Tuesday #111"
 date: 2019-2-12 00:00:00 -0400
 comments: true
 ---
-<a href="https://andyleonard.blog/2019/02/t-sql-tuesday-111-what-is-your-why/" alt="T-SQL Tuesday"><img src="http://dataeducation.com/wp-content/uploads/2010/06/T-SQL-Tuesday-Logo.jpg"></a>
+<a href="https://andyleonard.blog/2019/02/t-sql-tuesday-111-what-is-your-why/" alt="T-SQL Tuesday"><img src="http://dataeducation.com/wp-content/uploads/2010/06/T-SQL-Tuesday-Logo.jpg" target="_blank"></a>
 
 I am a first time poster of T-SQL Tuesdays. My experience with SQL is limited. In fact, the only experience I have is from a tutorial on syntax from W3C. Though I found T-SQL Tuesday through a friend Allen White, and thought I’d share my “why”.
 
