--- a/_posts/2019-2-12-my-why.md
+++ b/_posts/2019-2-12-my-why.md
@@ -6,7 +6,7 @@ comments: true
 ---
 <a href="https://andyleonard.blog/2019/02/t-sql-tuesday-111-what-is-your-why/" alt="T-SQL Tuesday"><img src="http://dataeducation.com/wp-content/uploads/2010/06/T-SQL-Tuesday-Logo.jpg" target="_blank"></a>
 
-I am a first time poster of T-SQL Tuesdays. My experience with SQL is limited. In fact, the only experience I have is from a tutorial on syntax from W3C. Though I found T-SQL Tuesday through a friend Allen White, and thought I’d share my “why”.
+I am a first time poster of T-SQL Tuesdays. My experience with SQL is limited. In fact, the only experience I have is from a tutorial on syntax from W3CSchools. Though I found T-SQL Tuesday through a friend Allen White, and thought I’d share my “why”.
 
 I have a degree in Music performance. I enjoyed making music with colleagues but as I got closer and closer to graduating it became increasingly obvious that it would become very hard to make a living in the music world. I never had a very strong desire to teach and being a full-time opera singer would be hard to live. So, I needed an alternative. 
 
