--- a/_posts/2018-10-29-ws-gm-five.md
+++ b/_posts/2018-10-29-ws-gm-five.md
@@ -16,3 +16,5 @@ It wasn't much of a match. The Sox pounced early, with a two run homer by Steve 
 This was probably the least exciting game to watch this series. Which is sad because it's also the last baseball game of the season. I like watching the season go out with a bang.
 
 Well, till next year, I suppose.
+
+Scorebook by: [Bob Carpenter](https://www.bcscorebook.com/).
